--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </header>
         <main>
             <div class="content">
-                <img src="./image/IMAGE 1.jpg" class="house" alt="Image" />
+                <img src="./image/IMAGE 1.jpg" class="image1" alt="Image" />
 
                 <div class="topic">
                     <h1>How to Make a YouTube Intro Video</h1>
